(rule
 (alias interop)
 (deps (alias test/interop/interop))
 (action (progn)))

(rule
 (alias cve-regress)
 (deps (alias test/cve_regress/cve-regress))
 (action (progn)))

(rule
 (alias http-bench)
 (deps (alias test/bench/http-bench))
 (action (progn)))

(rule
 (alias eta-lifecycle)
 (deps (alias test/eta_lifecycle/eta-lifecycle))
 (action (progn)))

(rule
 (alias perf-compare)
 (deps (alias test/perf_compare/perf-compare))
 (action (progn)))
