(rule
 (alias interop)
 (deps (alias test/interop/interop))
 (action (progn)))

(rule
 (alias cve-regress)
 (deps (alias test/cve_regress/cve-regress))
 (action (progn)))

(rule
 (alias http-bench)
 (deps (alias test/bench/http-bench))
 (action (progn)))

(rule
 (alias eta-lifecycle)
 (deps (alias test/eta_lifecycle/eta-lifecycle))
 (action (progn)))

(rule
 (alias perf-compare)
 (deps (alias test/perf_compare/perf-compare))
 (action (progn)))

(rule
 (alias red-probes)
 (deps
  (alias test/red_probes/h1_smuggle/red-probes)
  (alias test/red_probes/h1_pipeline/red-probes)
  (alias test/red_probes/h1_client_malicious/red-probes)
  (alias test/red_probes/h2_frames/red-probes)
  (alias test/red_probes/h2_flow/red-probes)
  (alias test/red_probes/h2_client_malicious/red-probes)
  (alias test/red_probes/h2_server_streams/red-probes)
  (alias test/red_probes/tls_frag/red-probes)
  (alias test/red_probes/handler_fail/red-probes)
  (alias test/red_probes/ws_malicious_server/red-probes)
  (alias test/red_probes/client_retry_idempotency/red-probes)
  (alias test/red_probes/server_lifecycle/red-probes))
 (action (progn)))
