(alias
 (name interop)
 (deps (alias test/interop/interop)))

(alias
 (name cve-regress)
 (deps (alias test/cve_regress/cve-regress)))

(alias
 (name http-bench)
 (deps (alias test/bench/http-bench)))

(alias
 (name eta-lifecycle)
 (deps (alias test/eta_lifecycle/eta-lifecycle)))

(alias
 (name h2spec)
 (deps (alias test/h2spec/h2spec)))

(alias
 (name perf-compare)
 (deps (alias test/perf_compare/perf-compare)))

(alias
 (name server-load)
 (deps (alias test/server_load/server-load)))

(alias
 (name red-probes)
 (deps
  (alias test/red_probes/h1_smuggle/red-probes)
  (alias test/red_probes/h1_pipeline/red-probes)
  (alias test/red_probes/h1_client_malicious/red-probes)
  (alias test/red_probes/h2_frames/red-probes)
  (alias test/red_probes/h2_flow/red-probes)
  (alias test/red_probes/h2_client_malicious/red-probes)
  (alias test/red_probes/h2_server_streams/red-probes)
  (alias test/red_probes/tls_frag/red-probes)
  (alias test/red_probes/handler_fail/red-probes)
  (alias test/red_probes/ws_malicious_server/red-probes)
  (alias test/red_probes/client_retry_idempotency/red-probes)
  (alias test/red_probes/server_lifecycle/red-probes)))
