(library
 (name otel_propagation)
 (modules services p_a_pair_only p_b_core_context p_c_exporter_only))

(executable
 (name runtime_smoke)
 (modules runtime_smoke)
 (libraries otel_propagation))

(executable
 (name neg_malformed_traceparent)
 (modules neg_malformed_traceparent)
 (libraries otel_propagation))
