(executable
 (name bench_http)
 (libraries
  eta_eio
  bench_lib
  eta
  eta_blocking
  eta_http
  eta_http_eio
  eta_http_h1
  eta_http_h2
  eta_http_tls_openssl
  eta_http_ws
  eta_stream
  eio
  eio_main
  cstruct
  unix))

(rule
 (alias bench)
 (action
  (setenv EIO_BACKEND posix
   (run ./bench_http.exe --quick))))
