(library
 (name eta_duckdb)
 (public_name eta_duckdb)
 (synopsis "DuckDB connector for Eta")
 (private_modules appender bulk bulk_row connection database dsl_backend pool row types value)
 (foreign_stubs
  (language c)
  (names duckdb_stubs)
  (flags :standard))
 (c_library_flags :standard -ldl)
 (libraries eta eta_sql_dsl unix threads))

(env
 (release
  (ocamlopt_flags
   (:standard -zero-alloc-check all))))
