(library
 (name eta)
 (public_name eta)
 (synopsis "Typed functional effects for OCaml: typed failures, exits, schedules, retry, race, timeout, and detached fibers; backed by Eio")
 (private_modules
  blocking_runtime
  island_runtime
  par_scheduler
  runtime_core
  runtime_instrument
  runtime_observability
  runtime_supervisor
  runtime_supervisor_types)
 (libraries eio eio.unix cstruct portable unix threads)
 (flags (:standard -alert -unsafe_multidomain -alert -do_not_spawn_domains)))

(env
 (release
  (ocamlopt_flags
   (:standard -zero-alloc-check all))))
