(library
 (name eta)
 (public_name eta)
 (synopsis "Typed functional effects for OCaml: typed failures, exits, schedules, retry, race, timeout, and detached fibers; backed by Eio")
 (private_modules
  blocking_runtime
  effect_blocking
  effect_concurrent
  effect_core
  effect_island
  effect_observability
  effect_resource
  effect_supervisor_scope
  island_runtime
  par_scheduler
  runtime_core
  runtime_instrument
  runtime_observability
  runtime_supervisor
  runtime_supervisor_types)
 (libraries eio eio.unix cstruct portable unix threads)
 (flags (:standard -alert -unsafe_multidomain -alert -do_not_spawn_domains)))

(env
 (release
  (ocamlopt_flags
   (:standard -zero-alloc-check all))))
