(library
 (name eta)
 (public_name eta)
 (synopsis "Typed functional effects for OCaml: typed failures, exits, schedules, retry, race, timeout, and detached fibers")
(private_modules
  effect_erasure
  effect_concurrent
  effect_core
  effect_observability
  effect_resource
  effect_schedule
  effect_supervisor_scope
  runtime_core
  runtime_erasure
  runtime_instrument
  runtime_observability
  runtime_supervisor))
