(library
 (name eta_http)
 (public_name eta.http)
 (synopsis "HTTP/1.1, HTTP/2, WebSockets and TLS client and server for Eta")
 (libraries
  eta
  eta.stream
  eio
  eio.unix
  bigstringaf
  cstruct
  domain-name
  ipaddr
  decompress.gz
  angstrom
  faraday
  h2
  hpack)
 (foreign_stubs
  (language c)
  (names tls_openssl_stubs)
  (flags :standard (:include c_flags.sexp)))
 (c_library_flags :standard (:include c_library_flags.sexp)))

(include_subdirs unqualified)

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (progn
   (with-stdout-to c_flags.sexp
    (bash "echo '('; pkg-config openssl --cflags | tr ' ' '\\n'; echo ')'"))
   (with-stdout-to c_library_flags.sexp
    (bash "echo '('; pkg-config openssl --libs | tr ' ' '\\n'; echo ')'")))))
