(library
 (name eta_http)
 (public_name eta_http)
 (synopsis "Backend-neutral HTTP protocol and client contract for Eta")
 (libraries
  eta
  eta_stream
  unix
  bigstringaf
  cstruct
  domain-name
  ipaddr
  base64
  decompress.gz
  angstrom
  faraday
  h2
  hpack
  yojson)
 (foreign_stubs
  (language c)
  (names tls_openssl_stubs)
  (flags :standard (:include c_flags.sexp)))
 (c_library_flags :standard (:include c_library_flags.sexp)))

(include_subdirs unqualified)

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (progn
   (with-stdout-to c_flags.sexp
    (bash "echo '('; pkg-config openssl --cflags | tr ' ' '\\n'; echo ')'"))
   (with-stdout-to c_library_flags.sexp
    (bash "echo '('; pkg-config openssl --libs | tr ' ' '\\n'; echo ')'")))))
