(library
 (name eta_http_eio)
 (public_name eta_http_eio)
 (synopsis "Eio transport adapter for eta-http")
 (libraries
  eta
  eta_blocking
  eta_eio
  eta_http
  eta_http_h1
  eta_http_h2
  eta_http_tls_openssl
  eta_http_ws
  eta_stream
  eio
  eio.unix
  bigstringaf
  cstruct
  domain-name
  ipaddr
  faraday
  yojson)
 (private_modules probe_samples))

(include_subdirs unqualified)
