(library
 (name eta_js_test)
 (public_name eta_js_test)
 (modules eta_js_test test_clock)
 (modes melange)
 (preprocess (pps melange.ppx))
 (libraries eta_js)
 (synopsis "Testing helpers for eta_js"))

(melange.emit
 (target eta_js_test_dist)
 (modules)
 (module_systems (esm mjs))
 (libraries eta_js_test))
