(library
 (name eta_signal)
 (public_name eta_signal)
 (synopsis "Incremental-style reactive signals for Eta")
 (private_modules
  eta_signal_bind
  eta_signal_cleanup
  eta_signal_debug
  eta_signal_error
  eta_signal_id
  eta_signal_kernel
  eta_signal_lane
  eta_signal_observer
  eta_signal_scope
  eta_signal_stream_bridge
  eta_signal_test_hooks
  eta_signal_timer_policy
  eta_signal_transaction
  eta_signal_stabilization)
 (libraries eta eta_stream))
