(library
 (name eta_sql)
 (public_name eta_sql)
 (synopsis "SQLite client for Eta with prepared statements and a typed effect surface")
 (foreign_stubs
  (language c)
  (names sqlite_stubs)
  (flags :standard (:include sqlite_c_flags.sexp)))
 (c_library_flags :standard (:include sqlite_c_library_flags.sexp))
 (libraries eta eta_sql_driver eta_sql_dsl eio unix threads))

(rule
 (targets sqlite_c_flags.sexp sqlite_c_library_flags.sexp)
 (action
  (progn
   (with-stdout-to sqlite_c_flags.sexp
    (bash "echo '('; pkg-config sqlite3 --cflags | tr ' ' '\n'; echo ')'"))
   (with-stdout-to sqlite_c_library_flags.sexp
    (bash "echo '('; pkg-config sqlite3 --libs | tr ' ' '\n'; echo ')'")))))

(env
 (release
  (ocamlopt_flags
   (:standard -zero-alloc-check all))))

(rule
 (alias runtest)
 (deps
  (source_tree test/soundness)
  (:eta_sql_cmxa eta_sql.cmxa))
 (action
  (run bash test/soundness/run.sh %{eta_sql_cmxa})))
