(library
 (name eta_turso)
 (public_name eta_turso)
 (synopsis "Turso connector for Eta")
 (private_modules compiled_ops connection dsl_backend pool row types value)
 (foreign_stubs
  (language c)
  (names turso_stubs)
  (flags :standard))
 (c_library_flags :standard -ldl)
 (libraries eta eta_sql eta_sql_dsl unix threads))

(env
 (release
  (ocamlopt_flags
   (:standard -zero-alloc-check all))))
