(library
 (name provide_survival)
 (wrapped true)
 (libraries effet eio eio_main)
 (modules
  services
  without_provide_scoped_factory
  without_provide_mock_injection
  without_provide_sandbox))

(executable
 (name runtime_smoke)
 (libraries provide_survival effet eio eio_main)
 (modules runtime_smoke))
