(executable
 (name test_eta_cache_jsoo)
 (enabled_if
  (<> %{ocaml_version} 5.2.0+ox))
 (modes js)
 (libraries eta eta_cache eta_jsoo js_of_ocaml)
 (js_of_ocaml
  (flags --effects=cps)))

(rule
 (alias runtest)
 (enabled_if
  (<> %{ocaml_version} 5.2.0+ox))
 (deps
  test_eta_cache_jsoo.bc.js)
 (action
  (run node test_eta_cache_jsoo.bc.js)))
