(test
 (name test_connectors)
 (libraries eta_eio eta_duckdb eta_turso eta_ladybug eio_main alcotest)
 (deps
  (:ladybug_extension libeta_ladybug_test_extension.lbug_extension))
 (action
  (setenv
   ETA_LADYBUG_TEST_EXTENSION
   %{ladybug_extension}
   (run %{test}))))

(rule
 (target libeta_ladybug_test_extension.lbug_extension)
 (deps ladybug_test_extension.c)
 (action
  (run %{cc} -shared -fPIC -o %{target} %{deps})))
