(test
 (name run)
 (modules
  run
  test_eta_support
  test_eta_effect_core
  test_eta_effect_concurrency
  test_eta_effect_retry_repeat
  test_eta_effect_resource_timeout
  test_eta_effect_uninterruptible
  test_eta_observability
  test_eta_duration_schedule
  test_eta_supervisor
  test_eta_clock_resource_scope
  test_eta_properties
  test_eta_portable_queue
  test_eta_queue
  test_eta_island
  test_eta_blocking
  test_eta_channel
  test_eta_pubsub
  test_eta_pool
  test_eta_redacted
  test_eta_mutable_ref
  test_eta_semaphore)
 (foreign_stubs
  (language c)
  (names blocking_test_stubs))
 (libraries eta eta_test eta_redacted alcotest eio_main eio.unix unix threads)
 (action
  (setenv EIO_BACKEND posix
   (run %{test}))))

(test
 (name test_log_level)
 (modules test_log_level)
 (libraries eta alcotest))

(rule
 (alias runtest)
 (deps
  (source_tree island_negative)
  (:eta_cmxa ../../lib/eta/eta.cmxa))
 (action
  (run bash island_negative/run.sh %{eta_cmxa})))

(rule
 (alias runtest)
 (deps
  (source_tree soundness)
  (:eta_cmxa ../../lib/eta/eta.cmxa))
 (action
  (run bash soundness/run.sh %{eta_cmxa})))
