(test
 (name run)
 (modules
  run
  test_eta_support
  test_eta_effect_core
  test_eta_effect_retry_repeat
  test_eta_effect_resource_timeout
  test_eta_effect_uninterruptible
  test_eta_observability
  test_eta_supervisor
  test_eta_blocking
  test_eta_channel)
 (libraries eta eta_blocking eta_eio eta_test alcotest eio_main eio_linux eio.unix unix threads)
 (action
  (setenv EIO_BACKEND posix
   (run %{test}))))

(rule
 (alias runtest)
 (deps
  (source_tree soundness)
  (:eta_cmxa ../../lib/eta/eta.cmxa))
 (action
  (run bash soundness/run.sh %{eta_cmxa})))
